Cleanup gliding and riptiding issues
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>