@@ -1,21 +1,20 @@
 package tc.oc.pgm.platform.modern.filters;
 
-import com.google.common.collect.ImmutableList;
 import java.util.Collection;
+import java.util.List;
 import org.bukkit.event.Event;
-import org.bukkit.event.player.PlayerRiptideEvent;
+import org.bukkit.event.entity.EntityPoseChangeEvent;
 import tc.oc.pgm.api.filter.FilterDefinition;
 import tc.oc.pgm.api.filter.query.PlayerQuery;
 import tc.oc.pgm.api.player.MatchPlayer;
 import tc.oc.pgm.filters.matcher.player.ParticipantFilter;
-import tc.oc.pgm.platform.modern.util.event.player.PlayerRiptideEndEvent;
 
 public class RiptidingFilter extends ParticipantFilter {
   public static final FilterDefinition INSTANCE = new RiptidingFilter();
 
   @Override
   public Collection<Class<? extends Event>> getRelevantEvents() {
-    return ImmutableList.of(PlayerRiptideEvent.class, PlayerRiptideEndEvent.class);
+    return List.of(EntityPoseChangeEvent.class);
   }
 
   @Override
